# Coq-Arithmetization

./: .gitignore  README.md  _CoqProject  coq-arithmetization.opam  dune-project  flake.nix
_build/default/: .gitignore
theories/: CircuitDef.v  NoQuant.v  NoQuant_UnFree.v  NoQuant_UnFree_LessDep.v  Prenex.v  Prenex_A.v  Prenex_Fin.v  SemiCircuit.v  SemiCircuitCorrect.v  SemiCircuitTranslation.v  SemiCircuitTranslationNoAdvice.v  SemiCircuit_NoFin.v  Sigma_1_1.v  Sigma_1_1_Dep.v  Sigma_1_1_Dep_Seq.v  Sigma_1_1_E.v  Sigma_1_1_Fin.v  Sigma_1_1_Poly_Stratified.v  Sigma_1_1_Stratified.v  Sigma_1_1_UnFree.v  Utils.v  dune
theories/OLD/: NoQuant.v  NoQuant_UnFree_LessDep.v  SemiCircuit.v  SemiCircuitTranslation.v  Sigma_1_1 (2).v  Sigma_1_1.v  Sigma_1_1_Dep_Seq.v  Sigma_1_1_Skolem_Stratified.v
